LEAF_Request_Portal/css/style.css
/* ... */
div#maincontent {
  width: 80%;
  box-shadow: 0 2px 4px #8e8e8e;
}

#maincontent {
  float: left;
  border: 1px solid #e0e0e0;
  padding: 4px;
  background-color: white;
}
div[id*="xhrDialog"] {
  max-width: 800px;
}
#comments {
  background-color: #e6e4b9;
  padding: 2px;
  margin-bottom: 16px;
  border: 1px solid black;
}

#comments > div {
  background-color: #fffdcd;
  padding: 4px;
  border-top: 1px solid black;
  /*cursor: pointer;*/
  font-size: 100%;
}

.comments_name {
  font-size: 80%;
  font-weight: bold;
}

.comments_time {
  float: right;
  color: #707070;
}

.comments_message {
  margin-left: 20px;
  padding-top: 4px;
}

.tools {
  background-color: #c0dbff;
}

button.tools, button#showSinglePage {
  background-color: #e8f2ff;
  padding: 2px;
  margin: 0px;
  padding-right: 6px;
  border-top: 1px solid black;
  border-bottom: 1px solid #e8f2ff;
  border-left: 1px solid #e8f2ff;
  border-right: 1px solid #e8f2ff;
  cursor: pointer;
  font-family: verdana;
  font-size: 14px;
  text-align: left;
  width: 99%;
}
button#showSinglePage {
    display: flex;
    align-items: center;
}

button.tools:hover,
button.tools:focus {
  background-color: #2372b0;
  color: white;
}

.tools > div {
  background-color: #e8f2ff;
}

.tools > div:hover {
  background-color: #2372b0;
  color: white;
}

.tools {
  padding: 2px;
  margin-bottom: 16px;
  border: 1px solid black;
}

.tools a {
  font-size: 14px;
  text-decoration: none;
  cursor: pointer;
}

.tools > div {
  padding: 2px;
  border-top: 1px solid black;
  cursor: pointer;
  font-size: 120%;
}

#adminTools > div {
  background-color: #ffe8e8;
}

#adminTools > div:hover {
  background-color: #b02323;
}

.tools > div > img {
  vertical-align: middle;
}

#category_list {
  padding: 2px;
  background-color: #f8dcd1;
  border: 1px solid black;
  margin-bottom: 16px;
}

#category_list > div {
  background-color: #f9e6df;
  padding: 2px;
  border-top: 1px solid black;
  cursor: pointer;
  font-size: 120%;
}

#category_list > div:hover {
  background-color: #2372b0;
  color: white;
}

#category_list > div > img {
  vertical-align: middle;
}
/* keeps content from overlapping menu */
#formcontent > .printmainform {
  overflow: hidden;
}
.toolbar_right {
  float: right;
}

.toolbar_security {
  background-color: #cbcbcb;
  border: 1px solid black;
  padding: 2px;
}

.toolbar_security > div {
  padding: 2px;
  background-color: #e3e3e3;
}

.buttonPermission {
  width: 100%;
  padding: 2px;
  border: 1px solid black;
  background-color: #e3e3e3;
  text-align: left;
  cursor: pointer;
}

.buttonPermission:hover {
  background-color: #2372b0;
  color: white;
}

.buttonPermission:focus {
  background-color: #2372b0;
  color: white;
}

.toolbar_right div {
}

.toolbar {
  width: 200px;
}

.toolbar h1 {
  text-align: center;
  font-size: 12px;
  margin: 0px;
  padding: 2px;
}

.toolbar h2 {
  font-size: 42px;
  font-weight: bold;
  text-align: center;
  background-color: #d4d8e0;
  margin: 2px;
}

.metaLabel {
  text-align: center;
  font-size: 12px;
  margin: 0px;
  padding: 2px;
}

.metaContent {
  font-size: 42px;
  font-weight: bold;
  text-align: center;
  background-color: #d4d8e0;
  margin: 2px;
}

.toolbar_inline {
}

.toolbar_inline div {
  float: left;
  margin: 4px;
}

.foldable :link,
.foldable :visited {
  background: url(../images/expanded.png) 0 50% no-repeat;
  border: none;
  padding-left: 16px;
}
.foldable :link:hover,
.foldable :visited:hover {
  background-color: transparent;
}
.collapsed > .foldable :link,
.collapsed > .foldable :visited {
  background-image: url(../images/collapsed.png);
}
.collapsed > div,
.collapsed > table,
.collapsed > ul,
.collapsed > dl {
  display: none;
}
fieldset > legend.foldable :link,
fieldset > legend.foldable :visited {
  color: #666;
  font-size: 110%;
}

fieldset {
  border: 1px solid #d7d7d7;
  padding: 0.5em;
  margin: 1em 0;
}
p.hint,
span.hint {
  color: #666;
  font-size: 85%;
  font-style: italic;
  margin: 0.5em 0;
  padding-left: 1em;
}
fieldset.iefix {
  background: transparent;
  border: none;
  padding: 0;
  margin: 0;
}
* html fieldset.iefix {
  width: 98%;
}

fieldset.iefix p {
  margin: 0;
}

legend {
  color: #747474;
  padding: 0 0.25em;
  font-size: 90%;
  font-weight: bold;
}

div#search > div {
  float: left;
  height: 80px;
  width: 400px;
  padding: 2px;
  margin: 2px;
}

div.workflowbox {
  padding: 2px;
  margin: 0px;
}

.openlate {
}

span.browsecounter a {
  padding: 4px;
  margin-right: 4px;
  font-size: 1.125rem;
  font-weight: bold;
  background-color: black;
  color: white;
  float: left;
  text-decoration: none;
}

span.browsetitle a {
  font-size: 120%;
  font-weight: normal;
  text-decoration: underline;
}

span.browsetypes {
  font-size: 11px;
  color: #707070;
}

.button {
  background-color: #e8f2ff;
  padding: 2px;
  border-top: 1px solid black;
  cursor: pointer;
  font-size: 120%;
}

.button:hover {
  background-color: #2372b0;
  border-top: 1px solid black;
  color: white;
}

.button > img {
  vertical-align: middle;
}

.buttonNorm {
  background-color: #e8f2ff;
  padding: 4px;
  border: 1px solid black;
  cursor: pointer;
  white-space: nowrap;
}

.buttonNorm:hover,
.buttonNormSelected,
.buttonNorm:hover > span .buttonNorm:focus {
  background-color: #2372b0;
  color: white;
}

.buttonNorm:focus {
  background-color: #2372b0;
  color: white;
}

.buttonNorm > img {
  vertical-align: middle;
}

button.buttonNorm {
  background-color: #e8f2ff;
  border: 1px solid black;
  margin: 2px;
  cursor: pointer;
  font-size: 12px;
}
button.depInbox {
  cursor: pointer;
  text-align: left;
  width:100%;
  padding: 0.5rem;
  border:0;
  display:flex;
  gap: 0.25rem;
  justify-content:space-between;
}

.checkable {
  cursor: pointer;
}
/* ... */

